--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vueadmin",
-  "version": "1.0.5",
+  "name": "UBN SITE",
+  "version": "1.0.0",
   "description": "vue admin project",
-  "author": "taylor <709161610@qq.com>",
+  "author": "crab <dugucanfeng@163.com>",
   "license": "MIT",
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -18,7 +18,8 @@
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vuex": "^2.0.0-rc.6"
+    "vuex": "^2.0.0-rc.6",
+    "vue-i18n": "^7.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
