add mobile style

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "UBN SITE",
+  "name": "ubmsite",
   "version": "1.0.0",
   "description": "vue admin project",
   "author": "crab <dugucanfeng@163.com>",
