--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ansi-styles": "^3.2.1",
     "axios": "^0.15.3",
     "echarts": "^3.3.2",
     "element-ui": "^1.2.8",
@@ -17,9 +18,9 @@
     "jquery": "^3.2.1",
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
+    "vue-i18n": "^7.6.0",
     "vue-router": "^2.3.0",
-    "vuex": "^2.0.0-rc.6",
-    "vue-i18n": "^7.6.0"
+    "vuex": "^2.0.0-rc.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -27,8 +28,8 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
     "babel-polyfill": "^6.16.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
@@ -36,6 +37,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "escape-string-regexp": "^1.0.5",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -44,7 +46,6 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
     "json-loader": "^0.5.4",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.5.0",
@@ -60,6 +61,7 @@
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
