--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "ansi-styles": "^3.2.1",
     "axios": "^0.15.3",
-    "echarts": "^3.3.2",
-    "element-ui": "^1.2.8",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "mint-ui": "^2.2.13",
@@ -58,7 +56,9 @@
     "sass-loader": "^6.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "swiper": "^4.3.2",
     "url-loader": "^0.5.8",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
